package uz.salvadore.orderservice.domain;

public enum OrderStatus {
    CREATED,
    VALIDATED,
    BOOKED,
    PAID,
    DELIVERED
}
